# sizing-script

./: .pdm-python  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.ipynb
