[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Antoine Jeanson", email = "antoine.j29@free.fr"},
]
dependencies = [
    "ipykernel>=6.25.2",
    "ipywidgets>=8.1.1",
    "black>=23.9.1",
    "ruff>=0.0.291",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

